analysis/symbol-light-classes/testData/lightClassByFqName/compilationErrors/RegularClassInCommonModule.kt
// common.pack.ClassToCheck
// MODULE: m1-common
// FILE: common.kt
package common.pack

class ClassToCheck

// FILE: main.kt
package common.pack

fun usage() {}
